--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ header{
 nav{
     text-align: right;
     padding: 30px 50px 0 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
 
 }
 nav > a{
