--- a/css/style.css
+++ b/css/style.css
@@ -248,8 +248,8 @@ header{
     height: 600px;
     background: #bc4e9c;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4286f43f, #2b4583), url(..//img5/montañas\ \(9\).jpg) ;
-    background: linear-gradient(to right, #4286f43f, #373B44), url(..//img5/montañas\ \(9\).jpg);
+    background: -webkit-linear-gradient(to right, #4286f43f, #2b4583), url(..//img5/montanas\ \(9\).jpg) ;
+    background: linear-gradient(to right, #4286f43f, #373B44), url(..//img5/montanas\ \(9\).jpg);
 
      /* Chrome 10-25, Safari 5.1-6 */
     
