--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,9 @@ main{
     height: 60px;
     color: #fff;
     font-size: 15px;
+    justify-content: start;
+    align-items: center;
+    display: flex;
 }
 .menu ul:hover {
     
