cambios menores texto

--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@ header .textos-header{
     font-size: 18px;
     font-weight: 100;
     justify-content: center;
-    text-align: justify;
+    text-align: center;
 }
 
 /*footer*/
