--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,14 @@ input[id="campo_edad"]{
 textarea[id="campo_mensaje"]{
     color:black;
 }
+.btnContacto{
+    background: linear-gradient(180deg, #2b4583 0%, #718d9e 100%);
+    transition: all .3s; 
+}
+.btnContacto:hover{
+    background: linear-gradient(180deg, blueviolet 0%, rgb(196, 179, 212) 100%);
+    transition: all .3s; 
+}
 .btnn{
     width: 240px;
     height: 40px;
@@ -368,6 +376,12 @@ header .textos-header{
 }
 
 /*Nuestras Instalaciones*/
+.fondoContainer{
+    background-image: url(../img5/un\ lugar\ soñado4.png);
+    background-size: cover;
+    background-position: center;
+    position:relative;
+}
 .conteiner-all{
     width: 100%;
     max-width: 1000px;
@@ -409,6 +423,7 @@ header .textos-header{
     flex-wrap: wrap;
 
 }
+
 .imagen-port{
     width:24%;
     margin-bottom: 10px;
@@ -423,32 +438,15 @@ header .textos-header{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    display: block;
+    /*display: block;*/
 }
-.hover-galeria{
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    transform: scale(0);
-    background:hsla(273, 91%, 27%, 0.7) ;
+.imagen-port:hover img{
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
     transition: transform .5s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+}
 
-}
-.hover-galeria img{
-    width: 50%;
-}
-.hover-galeria p{
-    color: #fff;
-
-}
-.imagen-port:hover .hover-galeria{
-    transform: scale(1);
-}
 /*Clientes*/
 .cards{
     display: flex;
@@ -506,6 +504,12 @@ header .textos-header{
 .servicio-ind img{
     width: 70%;
 }
+.servicio-ind:hover img{
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
+    transition: transform .5s;
+}
 .servicio-ind h3{
     font-size: 20px;
     color: #4d0686;
@@ -522,7 +526,7 @@ header .textos-header{
 
 /*footer*/
 .pie{
-    background:rgb(41, 41, 131) ;
+    background:#2b4583 ;
 }
 
 .logo{
@@ -586,7 +590,7 @@ div h5{
     padding: 10px 0;
 }
 a{
-    color: rgb(136, 130, 130);
+    color:#e2bfd5;
     text-decoration: none;
     padding: 5px;
 }
