--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,8 @@ header .textos-header{
     float: left;
     margin-right: 20px;
     margin-bottom: 15px;
+    color: #4b0c80;
+    border: 4px solid  rgb(180, 94, 180);
 
 }
 .conteiner-all p{
